<resources>
    <string name="app_name">Saúde</string>
    <string name="action_settings">Configurações</string>
    <string name="title_activity_login">Login</string>

    <!-- Strings related to login -->
    <string name="prompt_email">nome de usuário</string>
    <string name="prompt_password">senha</string>
    <string name="action_sign_in">Login</string>
    <string name="action_sign_in_short">Login</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">Senha incorreta</string>
    <string name="error_field_required">Este campo é obrigatório</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="login_url">gw/index.php</string>
    <string name="load_url">gw/index.php</string>
    <string name="title_activity_lista">Lista</string>
    <string name="remember_me">Lembrar nome de usuário</string>
    <string name="reload_groselha">Recarregar</string>
    <string name="action_continue">Avançar</string>
    <string name="action_quit">Encerrar</string>
    <string name="save_url">gw/index.php</string>
    <string-array name="meses">
        <item>Janeiro</item>
        <item>Fevereiro</item>
        <item>Março</item>
        <item>Abril</item>
        <item>Maio</item>
        <item>Junho</item>
        <item>Julho</item>
        <item>Agosto</item>
        <item>Setembro</item>
        <item>Outubro</item>
        <item>Novembro</item>
        <item>Dezembro</item>
    </string-array>
    <string-array name="meses_abbrev">
        <item>Jan</item>
        <item>Fev</item>
        <item>Mar</item>
        <item>Abr</item>
        <item>Mai</item>
        <item>Jun</item>
        <item>Jul</item>
        <item>Ago</item>
        <item>Set</item>
        <item>Out</item>
        <item>Nov</item>
        <item>Dez</item>
    </string-array>
    <string-array name="estados">
        <item/>
        <item>Acre</item>
        <item>Alagoas</item>
        <item>Amapá</item>
        <item>Amazonas</item>
        <item>Bahia</item>
        <item>Ceara</item>
        <item>Distrito Federal</item>
        <item>Espírito Santo</item>
        <item>Goiás</item>
        <item>Maranhão</item>
        <item>Mato Grosso</item>
        <item>Mato Grosso do Sul</item>
        <item>Minas Gerais</item>
        <item>Pará</item>
        <item>Paraíba</item>
        <item>Paraná</item>
        <item>Pernambuco</item>
        <item>Piauí</item>
        <item>Rio de Janeiro</item>
        <item>Rio Grande do Norte</item>
        <item>Rio Grande do Sul</item>
        <item>Rondônia</item>
        <item>Roraima</item>
        <item>Santa Catarina</item>
        <item>São Paulo</item>
        <item>Sergipe</item>
        <item>Tocantins</item>
    </string-array>
    <string-array name="ufs">
        <item/>
        <item>AC</item>
        <item>AL</item>
        <item>AP</item>
        <item>AM</item>
        <item>BA</item>
        <item>CE</item>
        <item>DF</item>
        <item>ES</item>
        <item>GO</item>
        <item>MA</item>
        <item>MT</item>
        <item>MS</item>
        <item>MG</item>
        <item>PA</item>
        <item>PB</item>
        <item>PR</item>
        <item>PE</item>
        <item>PI</item>
        <item>RJ</item>
        <item>RN</item>
        <item>RS</item>
        <item>RO</item>
        <item>RR</item>
        <item>SC</item>
        <item>SP</item>
        <item>SE</item>
        <item>TO</item>
    </string-array>
    <string name="month">Mês</string>
    <string name="year">Ano</string>
    <string name="day">Dia</string>
    <string name="cidades_url">http://home.newt.com.br/?m=getcidades2</string>
    <string name="escolha_cidade">cidade</string>
    <string name="logout">Sair</string>
    <string name="carregando">Carregando...</string>
    <string name="aguarde">Aguarde</string>
    <string name="minimo_tamanho_de_texto">Texto deve ser informado</string>
    <string name="valor_requerido">Resposta Obrigatória</string>
    <string name="value_required">Valor Obrigatório</string>
    <string name="loading_files">Carregando arquivos adicionais...</string>
    <string name="no_network_available">Não há conexão. Tente novamente quando estiver conectado.</string>
    <string name="action_send">Enviar Dados</string>
    <string name="server_not_available">O servidor não responde</string>
    <string name="try_again">Tentar novamente?</string>
    <string name="problems_downloading">Alguns arquivos não puderam ser baixados.</string>
    <string name="cancel">Cancelar</string>
    <string name="nada">Zero</string>
    <string name="nome_da_rua">Nome da rua</string>
    <string name="numero">Número</string>
    <string name="complemento">Complemento</string>
    <string name="telefone">Telefone</string>
    <string name="bairro">Bairro</string>
    <string name="cidade">Cidade</string>
    <string name="nome_do_contato">Nome do Contato</string>
    <string name="presente">Presente</string>
    <string name="nome_do_habitante">Nome</string>
    <string name="cns">Número CNS</string>
    <string name="nome_da_mae">Nome da mãe</string>
    <string name="nome_do_pai">Nome do pai</string>
    <string name="cpf">CPF</string>
    <string name="rg">RG</string>
    <string name="data_nasc">Data de nascimento</string>
    <string name="estado">Estado</string>
    <string name="comment_this">Comentário:</string>
    <string name="genero_do_habitante">Gênero</string>
    <string name="celular_do_habitante">Celular</string>
    <string name="logradouro">Logradouro</string>
    <string name="cns_invalido">CNS Inválido</string>
    <string name="cpf_invalido">CPF inválido</string>
    <string name="user">Usuário</string>
    <string name="Password">Senha</string>
    <string name="enter">ENTRAR</string>
    <string name="remember_city">Lembrar cidade</string>
    <string name="nova">Nova...</string>
    <string name="no_questions_available">Não há pesquisas para responder</string>
    <string name="msgfim_padrao">Questionário concluído</string>
    <string name="escolha_muinicipio_de_instalacao">Selecione o município de instalação</string>
    <string name="desinfect_device">Remover dados locais?</string>
    <string name="veja_bem">Aviso</string>
    <string name="cep">CEP</string>
    <string name="apagar_dados">Apagar dados no dispositivo</string>
    <string name="cep_invalido">CEP inválido</string>
    <string name="tel_invalido">Telefone não válido</string>
    <string name="synchronize">Atualizar</string>
    <string name="choice_required">Escolha uma opção</string>
    <string name="genero_requerido">Gênero é obrigatório</string>
    <string name="data_nasc_requerido">Data de nascimento é obrigatória</string>
    <string name="uf_required">UF obrigatório</string>
</resources>
