<?xml version="1.0" encoding="utf-8"?><LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    >
    <LinearLayout
        android:id="@+id/habitante_layout"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="5"
        >
        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="5"
            android:orientation="vertical"
            android:layout_height="match_parent">
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:hint="@string/nome_do_habitante"
                android:ems="10"
                android:id="@+id/editText_habi1_nom" />
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:hint="@string/nome_da_mae"
                android:ems="10"
                android:id="@+id/editText_habi1_nom_mae" />
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:hint="@string/nome_do_pai"
                android:ems="10"
                android:id="@+id/editText_habi1_nom_pai" />
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:hint="@string/cns"
                android:ems="10"
                android:id="@+id/editText_habi1_cns" />
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:hint="@string/rg"
                android:ems="10"
                android:id="@+id/editText_habi1_rg" />
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:hint="@string/cpf"
                android:ems="10"
                android:id="@+id/editText_habi1_cpf" />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">
                <Spinner
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:prompt="@string/day"
                    android:id="@+id/spinner_day" />
                <Spinner
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:entries="@array/meses"
                    android:prompt="@string/month"
                    android:id="@+id/spinner_month" />
                <Spinner
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:prompt="@string/year"
                    android:id="@+id/spinner_year" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="id da pergunta"
        android:id="@+id/perg_id"
        android:visibility="gone"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="id da pergunta"
        android:id="@+id/habi1_cod"
        android:visibility="gone"
        />
    <include layout="@layout/decline"/>
</LinearLayout>