<?xml version="1.0" encoding="utf-8"?><LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    >
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="10"
        android:id="@+id/endereco_layout"
        >
        <LinearLayout
            android:paddingRight="12dp"
            android:layout_width="0dp"
            android:layout_weight="5"
            android:orientation="vertical"
            android:layout_height="match_parent">
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:ems="10"
                android:hint="@string/logradouro"
                style="@style/EditGrande"
                android:id="@+id/editText_nomedarua" />
            <EditText
                android:hint="@string/numero"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:ems="10"
                style="@style/EditGrande"
                android:id="@+id/editText_numero" />
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:ems="10"
                style="@style/EditGrande"
                android:hint="@string/complemento"
                android:id="@+id/editText_complemento" />
            <EditText
                android:hint="@string/telefone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="phone"
                android:ems="10"
                style="@style/EditGrande"
                android:id="@+id/editText_telefone" />
            <EditText
                android:hint="@string/bairro"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:ems="10"
                style="@style/EditGrande"
                android:id="@+id/editText_bairro" />
        </LinearLayout>
        <LinearLayout
            android:paddingLeft="12dp"
            android:layout_width="0dp"
            android:layout_weight="5"
            android:orientation="vertical"
            android:layout_height="match_parent">
            <EditText
                android:hint="@string/cidade"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:ems="10"
                style="@style/EditGrande"
                android:id="@+id/editText_cidade" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/estado"
                />
            <Spinner
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/estado_spinner"
                android:entries="@array/estados"
                />
            <EditText
                android:hint="@string/nome_do_contato"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:ems="10"
                style="@style/EditGrande"
                android:id="@+id/editText_nomedocontato" />
            <CheckBox
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/presente_checkbox"
                android:text="@string/presente"
                />
        </LinearLayout>
    </LinearLayout>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="id da pergunta"
        android:id="@+id/perg_id"
        android:visibility="gone"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/ende1_lat"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/ende1_lng"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/ende1_cod"
        />
    <include layout="@layout/decline"/>
</LinearLayout>