<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">]
    <RelativeLayout
        android:id="@+id/cidade_select"
        android:visibility="gone"

        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <Spinner
            android:layout_centerInParent="true"
            android:layout_margin="80dp"
            android:spinnerMode="dialog"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/city_spinner" />
        <Button
            android:id="@+id/cidade_ok"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_gravity="bottom"
            android:background="#f74134"
            android:paddingBottom="20dp"
            android:paddingTop="10dp"
            android:text="@string/enter"
            android:textColor="@color/white"
            android:textSize="30sp" />
    </RelativeLayout>
    <ProgressBar
        android:id="@+id/login_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:visibility="gone"
        android:layout_gravity="center_vertical|center_horizontal" />
    <RelativeLayout
        android:id="@+id/login_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/imagery"
            android:layout_width="140dp"
            android:layout_height="140dp"
            android:layout_centerHorizontal="true"
            android:adjustViewBounds="true"
            android:foregroundGravity="center"
            android:src="@drawable/logo_newt_completo" />

        <EditText
            android:id="@+id/username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/imagery"
            android:layout_marginLeft="150dp"
            android:layout_marginRight="150dp"
            android:ems="10"
            android:hint="@string/user"
            android:inputType="text"
            android:textSize="22sp" />

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/username"
            android:layout_marginLeft="150dp"
            android:layout_marginRight="150dp"
            android:ems="10"
            android:hint="@string/Password"
            android:inputType="textPassword"
            android:textSize="22sp" />

        <Button
            android:id="@+id/buttonok"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_gravity="bottom"
            android:background="#f74134"
            android:paddingBottom="20dp"
            android:paddingTop="10dp"
            android:text="@string/enter"
            android:textColor="@color/white"
            android:textSize="30sp" />
    </RelativeLayout>
</LinearLayout>